--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <title>Document</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="style/stye.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
     <section class="header bg-dark">
 
-        <div class="container">
+        <div class="container ">
             <div class="row">
                 <div class="col-md-3 ">
                     <img style="height: 100px; width: 400px;" src="image/_wiwn8912WI_logo-vhubnew.png" alt="">
@@ -151,6 +152,17 @@
         </div>
 
     </section>
+    <section class="maincontent">
+
+        <div class="container">
+
+            <div class="row">
+
+            </div>
+
+        </div>
+
+    </section>
     <section class="footer bg-dark text-white py-4">
 
         <div class="container">
@@ -195,17 +207,29 @@
                 <div class="col-2">
 
                 </div>
-                <div class="col-4">
+                <div class="col-1">
+                    <li style="list-style: none; text-decoration: none;  ">
+                        <a href="#" style="font-size: 25px;" class='bx bxl-youtube'></a>
+                    </li>
+                </div>
+
+                <div class="col-1">
+                    <li style=" list-style: none; text-decoration: none; color: rgb(128, 124, 124) ">
+                        <a href="#" style="font-size: 25px;" class='bx bxl-facebook-square'></a>
+                    </li>
+                </div>
+                <div class="col-1">
                     <ul class="icons" style="margin: 0">
-                        <li style="list-style: none; text-decoration: none; "><a target="_blank" class="icon fa-youtube-square text-white"><span
-                                    class="label">Youtube</span></a></li>
-                        <li style="list-style: none; text-decoration: none;  "><a target="_blank" class="icon fa-facebook text-white"><span
-                                    class="label">Facebook</span></a></li>
-                        <li style="list-style: none; text-decoration: none; "><a target="_blank" class="icon  fa-graduation-cap text-white "><span
-                                    class="
-                                label">VLU Website</span></a></li>
+
+
+                        <li style="list-style: none; text-decoration: none; ">
+
+                            <a href="#" style="font-size: 25px;" class='bx bxs-graduation'></a>
+                        </li>
                     </ul>
                 </div>
+                <div class="col-1"></div>
+
 
             </div>
             <hr>
